I added the links to the footer

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
   <h1>Welcome to Weather app</h1>
-  <footer>coded by UBANI SUCCESS ISIOMA</footer>  
+  <footer>coded by <a href="https://github.com/ISIOMA123123" target="_blank">ubani success isioma</a> and its hosted on <a href="https://github.com/" target="_blank">github</a> and website hosted on <a href="https://www.netlify.com/" target="_blank">netlify</a></footer>
 </body>
 </html>
