--- a/index.html
+++ b/index.html
@@ -6,7 +6,21 @@
     <title>weather app</title>
 </head>
 <body>
-  <h1>Welcome to Weather app</h1>
+  <header>
+    <form>
+        <input type="search" placeholder="Enter a city..." required>
+        <input type="submit" value="search">
+    </form>
+  </header>
+  <main>
+    <div>
+    <h1>Paris</h1>
+    <p>Tuesday 24:24, scattered clouds
+        <br>humidity: 66%, wind: 3.13km/h 
+    </p>
+   </div>
+    <div>⛅ 12&deg;C</div>
+  </main>
   <footer>coded by <a href="https://github.com/ISIOMA123123" target="_blank">ubani success isioma</a> and its open sourced on <a href="https://github.com/" target="_blank">github</a> and website hosted on <a href="https://www.netlify.com/" target="_blank">netlify</a></footer>
 </body>
 </html>
