--- a/index.html
+++ b/index.html
@@ -3,9 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="srces/index.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet">
     <title>weather app</title>
 </head>
 <body>
+    <div class="myweather">
   <header>
     <form>
         <input type="search" placeholder="Enter a city..." required>
@@ -22,5 +29,6 @@
     <div>⛅ 12&deg;C</div>
   </main>
   <footer>coded by <a href="https://github.com/ISIOMA123123" target="_blank">ubani success isioma</a> and its open sourced on <a href="https://github.com/" target="_blank">github</a> and website hosted on <a href="https://www.netlify.com/" target="_blank">netlify</a></footer>
+</div>
 </body>
 </html>
