added the functionality using the api

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <main>
     <div class="weather-information">
     <div>
-    <h1 class="weatherApp-city" id="cityElement">Paris</h1>
+    <h1 class="weatherApp-city" id="cityElement"></h1>
     <p class="weatherApp-time">
       <span class="weatherApp-timeNow">Tuesday 24:24</span>, scattered clouds
         <br>humidity: <strong>66%</strong>, wind: <strong>3.13km/h</strong> 
@@ -31,7 +31,7 @@
    </div>
     <div class="temperature-Degree">
       <span class="temperature-Degree-Icon">⛅</span>
-       <span class="temperature-Degree-Value">12</span>
+       <span class="temperature-Degree-Value" id="temperatureValuenow"></span>
        <span class="temperature-Degree-Unit">&deg;C</span></div>
 </div>
   </main>
