i added api time, speed and humidity from js

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
     <div>
     <h1 class="weatherApp-city" id="cityElement"></h1>
     <p class="weatherApp-time">
-      <span class="weatherApp-timeNow">Tuesday 24:24</span>, scattered clouds
-        <br>humidity: <strong>66%</strong>, wind: <strong>3.13km/h</strong> 
+      <span class="weatherApp-timeNow" id="weatherTimeNow">Tuesday 24:24</span>, <span id="weatherDescription">scattered clouds</span>
+        <br>humidity: <strong id="humidityResult">66%</strong>, wind: <strong id="windDescription">3.13km/h</strong> 
     </p>
    </div>
     <div class="temperature-Degree">
