--- a/index.html
+++ b/index.html
@@ -40,6 +40,48 @@
           <span class="temperature-Degree-Unit">&deg;C</span>
         </div>
       </div>
+<div class="weather-forecast">
+  <div class="weather-forecast-day"> 
+      <div class="weather-forecast-date">Tues</div>  
+      <div class="weather-forecast-icon">🌧️</div>
+    <div class="weather-forecast-temperatures">
+        <div class="weather-forecast-temperature"><strong>15&deg;</strong></div>
+        <div class="weather-forecast-temperaturetwo"> 9&deg;</div>
+    </div>
+  </div>
+  <div class="weather-forecast-day">
+    <div class="weather-forecast-date">Wed</div>
+    <div class="weather-forecast-icon">🌧️</div>
+    <div class="weather-forecast-temperatures">
+      <div class="weather-forecast-temperature"><strong>15&deg;</strong></div>
+      <div class="weather-forecast-temperaturetwo"> 9&deg;</div>
+    </div>
+  </div>
+  <div class="weather-forecast-day">
+    <div class="weather-forecast-date">Thurs</div>
+    <div class="weather-forecast-icon">🌧️</div>
+    <div class="weather-forecast-temperatures">
+      <div class="weather-forecast-temperature"><strong>15&deg;</strong></div>
+      <div class="weather-forecast-temperaturetwo"> 9&deg;</div>
+    </div>
+  </div>
+    <div class="weather-forecast-day">
+      <div class="weather-forecast-date">Fri</div>
+      <div class="weather-forecast-icon">🌧️</div>
+      <div class="weather-forecast-temperatures">
+        <div class="weather-forecast-temperature"><strong>15&deg;</strong></div>
+        <div class="weather-forecast-temperaturetwo"> 9&deg;</div>
+      </div>
+    </div>
+    <div class="weather-forecast-day">
+      <div class="weather-forecast-date">Sat</div>
+      <div class="weather-forecast-icon">🌧️</div>
+      <div class="weather-forecast-temperatures">
+        <div class="weather-forecast-temperature"><strong>15&deg;</strong></div>
+        <div class="weather-forecast-temperaturetwo"> 9&deg;</div>
+      </div>
+    </div>
+</div>
     </main>
     <footer>
       <p>coded by <a href="https://github.com/ISIOMA123123" target="_blank">ubani success isioma</a> and its open
